fix: fix obscure inline-block white space bug

--- a/styles/global.css
+++ b/styles/global.css
@@ -37,16 +37,6 @@ a:hover {
   color: var(--main-text);
 }
 
-/* #main {
-    height: 100%;
-    max-width: 720px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-} */
-
 .j-link,
 .j-link:hover {
   text-decoration: none !important;
@@ -166,7 +156,8 @@ a:hover {
 }
 
 .button--gold {
-  display: inline-block;
+  display: inline-flex;
+  margin: 0 4px;
   border-radius: 4px;
   border: 1px solid var(--main-text);
   color: var(--main-text);
